Fixed a few grammar items in tutorial

--- a/src/pages/tutorial/tutorial_vswin_petstore.html
+++ b/src/pages/tutorial/tutorial_vswin_petstore.html
@@ -21,7 +21,7 @@ tutorial: VS
         <li>Enter "PetStore" as the Project Name.</li>
         <li>Edit the Location to point to the LazyStackTutorial folder.</li>
         <li>Click on the Create button. A solution with your PetStore WebApi project is created.</li>
-        <li>Select Visual Studio menuitem Build &RightArrow; Rebuild Solution. The solution compiles successfully.</li>
+        <li>Select Visual Studio menu item "Build &RightArrow; Rebuild Solution." The solution compiles successfully.</li>
     </ol>
    
 
@@ -29,7 +29,7 @@ tutorial: VS
     <ol>
         <li><a href="/assets/tutorial/PetStore.yaml" download="PetStore.yaml">Click to Download PetStore.yaml file</a></li>
         <li>Move PetStore.yaml from your Downloads folder to the PetStore Solution root folder.</li>
-        <li>Select Visual Studio menuitem "Tools/LazyStack - Generate Projects". Multiple projects and solution folders
+        <li>Select Visual Studio menu item "Tools/LazyStack - Generate Projects". Multiple projects and solution folders
             are created.
             <ul>
                 <li>Controllers folder
