--- a/src/pages/intro/intro_techoverview.html
+++ b/src/pages/intro/intro_techoverview.html
@@ -6,7 +6,7 @@ topic: Tech Overview
 {{> intro_menu}}
 <div class=lz-r-content>
     <h3>LazyStack Technical Overview</h3>
-    <p>LazyStack is a tool that ingests an OpenApi (swagger) REST API specification and generates the AWS Server Application Model
+    <p>LazyStack is a tool that ingests an OpenApi (swagger) REST API specification and generates the AWS Serverless Application Model
         (SAM) template and the C# AWS Lambda projects necessary to stand up a fully featured commercial-grade application stack
         in AWS. It also generates a client application SDK making it simple to call that stack from C# applications.</p>
     <p>LazyStack is comprised of a free stack generator tool and some MIT licensed open-source support libraries.</p>
