--- a/src/pages/installation/installation_aws.html
+++ b/src/pages/installation/installation_aws.html
@@ -45,8 +45,8 @@ topic: GettingStarted
 
     <h4>AWS Organization Setup Part 1</h4>
     <p>In Part 1 you create your AWS Organization with a single Organizational Unit (OrgDevOU) 
-        and your first developer account in that OU. This is setup is enough to proceed with 
-        the LazyStack Tutorial.
+        and your first developer account in that OU. After completing Part 1, you may proceed proceed 
+        with the LazyStack Dev Tools install and then run through the LazyStack Tutorial.
     </p>
 
     <img src="/assets/img/LazyStackSMF1.svg" width="100%">
