--- a/src/pages/installation/installation_awsorgsetupsteps.html
+++ b/src/pages/installation/installation_awsorgsetupsteps.html
@@ -16,13 +16,13 @@ topic: GettingStarted
        <li>Open a PowerShell Terminal.</li>
        <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
        <li>Issue the following command:
-           <pre><code class="language-bashshell">. .\CreateOrganization.ps1</code></pre>
+           <pre><code class="language-bashshell">. .\Org_Create.ps1</code></pre>
            You will be prompted for your OrgCode and confirmation of the AWS CLI Profile to use. 
            <br>
            Here is an example of running the script: 
            <pre><code class="language-bashshell">
-CreateOrganization.ps v1.0.0 
-This script creates an Organization and Organizational Units for Dev, Review and Prod.
+Org_Create.ps v1.0.0 
+This script creates an Organization and an Organizational Unit for Dev.
 Note: Press return to accept a default value.
 Enter your OrgCode (ex: Lz): Az 
 Enter your AWS CLI Management Account Profile (default: AzMgmt):
