--- a/src/pages/installation/installation_awscicdsetupsteps.html
+++ b/src/pages/installation/installation_awscicdsetupsteps.html
@@ -5,13 +5,49 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS CI/CD Environment Setup Guide</h4>
+    <h4>AWS CI/CD Environment Setup</h4>
+    <p>In this step implement Continuous Integration and Continuous Deployment for 
+        your Testing and Production accounts using the AWS CodeBuild service integrated 
+        with a GitHub Account.
+    </p>
+
     <ol>
-        <li>Create a GitHub Account</li>
-        <li>Create a Project Repository</li>
-        <li>Create a CodeStar Connection for Review Account</li>
-        <li>Create a CodeStar Connection for Prod Account</li>
-        <li>Run InstallCICD.ps1 script.</li>
+        <li><a href="https://github.com/join" {{>newtab}}>Create</a> a GitHub Account</li>
+        <br>
+        <li><a href="https://docs.github.com/en/github/getting-started-with-github/create-a-repo" {{>newtab}}>Create</a> a Project Repository</li>
+        <br>
+        <li>Create a CodeBuild Connection Connection for Test Account
+            <ol type="a">
+                <li>Log into the AWS OrgTest account using the OrgTest IAM User credentials.</li>
+                <li>Navigate to the <a href="https://console.aws.amazon.com/codesuite/codebuild/projects?" {{>newtab}}>CodeBuild</a> Console</li>
+                <li>Select Settings &rightarrow; Connections in navigation pane. The Developer Tools > Connections page appears.</li>                
+                <li>Click the Create Connection Button. The Create Connection page appears.</li>
+                <li>Select the GitHub radio button and enter a connection name.</li>
+                <li>Click on the Connect to GitHub button. You will be prompted to log into GitHub if you are not already logged in The Connect to GitHub page appears.</li>
+                <li>Click on the "Install a new app" button. The GitHub "Install AWS Connector for GitHub" page appears with a list of accounts you have access to. Select identity under which you have 
+                    access to the application repository used by this CI/CD setup. The AWS Connector for GitHub
+                    page appears.
+                </li>
+                <li>Use the options on the page to configure the connector's access to the repository.
+                </li>
+                <li>Click the Save button.</li>
+            </ol>
+        </li>
+        <br>
+        <li>Run Test_CICD_Projects_Install.ps1 script.</li>
+        <br>
+        <li>Create a CodeBuild Connection for Prod Account
+            <ol type="a">
+                <li>Log into the AWS OrgProd account using the OrgProd IAM User Credentials.</li>
+                <li>Navigate to the <a href="https://console.aws.amazon.com/codesuite/codebuild/projects?" {{>newtab}}>CodeBuild</a> Console</li>
+                <li>Select Settings &rightarrow; Connections in navigation pane. The Developer Tools > Connections page appears.</li>                
+                <li>Click the Create Connection Button. The Create Connection page appears.</li>
+                <li>Select the GitHub radio button and enter a connection name.</li>
+                <li>todo</li>
+            </ol>
+        </li>
+        <br>
+        <li>Run Prod_CICD_Projects_Install.ps1 script.</li>
     </ol>
 
 </div>
