--- a/src/pages/installation/installation_awsdevsetupsteps.html
+++ b/src/pages/installation/installation_awsdevsetupsteps.html
@@ -17,10 +17,10 @@ topic: GettingStarted
         <li>Open a PowerShell Terminal.</li>
         <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
         <li>Execute the CreateDevAccount.ps1 script:
-            <pre><code class="language-bashshell">. .\CreateDevAcct.ps1</code></pre>
+            <pre><code class="language-bashshell">. .\Dev_Account_Create.ps1</code></pre>
                     Here is a script run with sample inputs:
                     <pre><code class="language-bashshell">
-CreateDevAcct.ps1 - V1.0.0
+Dev_Account_Create.ps1 - V1.0.0
 This script adds a development account to the Dev Organizational Unit.
 Note: Press return to accept a default value.
 Enter your OrgCode (ex: Lz): Az
@@ -50,9 +50,6 @@ Creating Development Account AzDevJoe
 Creating Developers Group in AzDevJoe account 
     - Adding policy PowerUsersAccess 
     - Adding policy IAMUserChangePassword
-    - Adding policy SS1 -- Serverless Stack SS1 (IAM Permissions)
-    - Adding policy SS2 -- Serverless Stack SS2 (IAM Permissions)
-    - Adding policy SS3 -- Serverless Stack SS3 (IAM Permissions)
 Creating IAM User AzDevJoe in the AzDevJoe account.
     - Adding the AzDevJoe profile.
     - Adding the IAM User AzDevJoe to the Developers group in the AzDevJoe account.
@@ -66,27 +63,16 @@ Processing Complete</code></pre>
     IAM User: AzDevJoe
     Temporary Password: 93939aA!
     Please login, you will required to reset your password.
-    Please login as soon as you can.
-    Create access keys for your workstation:
-    Proceed to the IAM Console.
-    ... 
-
-    Your account is provisioned to all deployment of three Serverless Stacks 
-    having the following names:
-    SS1 
-    SS2
-    SS3
-    Note: Predefined stack names are necessary for assignment of IAM Permissions
+    Please login as soon as possible.
+    Follow the "Dev profile Setup" instructions at http://lazystack.io/installation/installation_awsdevprofilesteps.html
         </code></pre>
     </p>
 
     <h5>Step Summary</h5>
-    <p>In this step we used the CreateDevAcct.ps1 script to create a new Dev Account 
+    <p>In this step we used the Dev_Account_Create.ps1 script to create a new Dev Account 
         and move that account into the Dev Organizational Unit. The script also 
         created a Developers group and in the new Dev Account, created a new IAM 
-        User for the developer and assigned that IAM User to the Developers group. The 
-        Developers Group contains a policy allow the developer to publish up to 
-        three Serverless Stacks with the pre-defined names SS1, SS2, SS3.
+        User for the developer and assigned that IAM User to the Developers group. 
     </p>
     <p>The pre-defined Serverless Stack names are required to associate necessary 
         IAM permissions to the Developers IAM User account to successfully publish 
