--- a/src/pages/installation/installation_awstestacctsetupsteps.html
+++ b/src/pages/installation/installation_awstestacctsetupsteps.html
@@ -14,11 +14,11 @@ topic: GettingStarted
       <ol>
          <li>Open a PowerShell Terminal.</li>
          <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
-         <li>Execute the CreateTestAccount.ps1 script:
-             <pre><code class="language-bashshell">. .\CreateTestAccount.ps1</code></pre>
+         <li>Execute the Test_Account_Create.ps1 script:
+             <pre><code class="language-bashshell">. .\Test_Account_Create.ps1</code></pre>
                      Here is a script run with sample inputs:
                      <pre><code class="language-bashshell">
- CreateTestAccount.ps1 - V1.0.0
+ Test_Account_Create.ps1 - V1.0.0
  This script adds a Test account to the Test Organizational Unit.
  Note: Press return to accept a default value.
  Enter your OrgCode (ex: Lz): Az
@@ -56,7 +56,7 @@ topic: GettingStarted
      </ol> 
 
 <h5>Step Summary</h5>
-<p>In this step we used the CreateTestAcct.ps1 script to create a Test Account under 
+<p>In this step we used the Test_Account_Create.ps1 script to create a Test Account under 
    the Test Organization Unit. We added a Administrators group to the account with 
    AdministratorAccess permissions. We added an IAM User for the account and added that 
    user to the Administrators group. We created a AWS CLI profile allowing the Management 
