--- a/src/pages/installation/installation_overview.html
+++ b/src/pages/installation/installation_overview.html
@@ -22,16 +22,20 @@ topic: GettingStarted
 
         <ul>
             <li>Part 1 <br>
-                Minimum Setup to run the LazyStack Tutorial:
+                Minimum Setup to run the LazyStack Tutorial:<br>
+                <img src="/assets/img/LazyStackSMF1.svg" width = "600">
                 <ul>
                     <li>AWS Management Account</li>
-                    <li>AWS Organizational Units for Development, Test and Production</li>
+                    <li>AWS Organizational Unit for Development</li>
                     <li>Developer Account(s) - supporting developer sandbox stacks</li>
                 </ul>
             </li>
+            <br>
             <li>Part 2 <br>
-                Complete your tool-chain to start collaborating on and publishing a commercial application
+                Complete your tool-chain to start collaborating on and publishing a commercial application:<br>
+                <img src="/assets/img/LazyStackSMF2.svg" width = "600">
                 <ul>
+                    <li>AWS Organizational Units for Test and Production</li>
                     <li>GitHub Software Versioning and Collaboration</li>
                     <li>Test Account - supporting test stacks with Continuous Integration and Continuous Deployment (CI/CD)</li>
                     <li>Production Account  - supporting production stacks with Continuous Deployment (CD)</li>
