--- a/src/pages/installation/installation_awscicdsetup.html
+++ b/src/pages/installation/installation_awscicdsetup.html
@@ -6,7 +6,13 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h4>AWS CI/CD Environment Overview</h4>
-
+    <dl>
+        <dt>Prerequisites:</dt>
+        <dd>- Prod Account Setup complete</dd>
+        <dt>Estimated Time: 5 minutes</dt> 
+        <dt>Estimated Cost: none</dt> 
+        <dt>Perform this step on the Management Workstation.</dt>
+    </dl>    
     <p>Setting up team collaboration with Continuous Integration / Continuous Deployment can be 
         easily accomplished using GitHub and AWS CodeBuild. 
         <ul>
