--- a/src/pages/installation/installation_awscicdsetupsteps.html
+++ b/src/pages/installation/installation_awscicdsetupsteps.html
@@ -6,6 +6,14 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h4>AWS CI/CD Environment Setup</h4>
+    <dl>
+        <dt>Prerequisites:</dt>
+        <dd>- Prod Account Setup complete</dd>
+        <dt>Estimated Time: 10 minutes</dt> 
+        <dt>Estimated Cost: none</dt> 
+        <dt>Perform this step on the Management Workstation.</dt>
+    </dl>  
+
     <p>In this step implement Continuous Integration and Continuous Deployment for 
         your Testing and Production accounts using the AWS CodeBuild service integrated 
         with a GitHub Account.
