--- a/src/pages/installation/installation_awsdevprofilesteps.html
+++ b/src/pages/installation/installation_awsdevprofilesteps.html
@@ -6,9 +6,14 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h4>Developer Profile Setup</h4>
-    <p>Prerequisites: Developer Account Creation complete<br>
-        Estimated Time: 2 minutes, Costs: none<br>
-        Perform this step on the Development Workstation</p>    
+    <dl>
+        <dt>Prerequisites:</dt>
+        <dd>- Developer Account Creation complete</dd>
+         <dt>Estimated Time: 2 minutes</dt> 
+        <dt>Estimated Cost: none</dt> 
+        <dt>Perform this step on the Development Workstation.</dt>
+    </dl>  
+
     <p>In this step we create access keys and then use those keys to configure a AWS CLI profile. 
         The AWS profile allows the developer to access their account using the AWS CLI, 
         AWS SAM CLI, AWS Microsoft Visual Studio AWS Toolkit Extension and LazyStack Developer Tools.
