--- a/src/pages/installation/installation_awsdevsetupsteps.html
+++ b/src/pages/installation/installation_awsdevsetupsteps.html
@@ -6,16 +6,21 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h4>Developer Account Setup</h4>
-    <p>Prerequisites: Organization Setup complete<br>
-        Estimated Time: 2 minutes, Costs: none<br>
-        Perform this step on the Management Workstation</p>
+    <dl>
+        <dt>Prerequisites:</dt>
+        <dd>- Organization Setup complete</dd>
+        <dd>- Email address to use for Developer AccountId</dd>
+         <dt>Estimated Time: 2 minutes</dt> 
+        <dt>Estimated Cost: none</dt> 
+        <dt>Perform this step on the Management Workstation.</dt>
+    </dl>      
     <p>In this step we will run the CreateDevAccount script to create a new Developer 
         Member Account belonging to the AWS organization and move this account into the OrgDevOU 
-        Organizational Unit. 
+        Organizational Unit. Execute these steps on your Management Workstation.
     </p>
     <ol>
-        <li>Open a PowerShell Terminal.</li>
-        <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
+        <li>Open a PowerShell terminal.</li>
+        <li>CD into the OrgMgmt folder. Use your OrgCode in place of "Org".</li>
         <li>Execute the CreateDevAccount.ps1 script:
             <pre><code class="language-bashshell">. .\Dev_Account_Create.ps1</code></pre>
                     Here is a script run with sample inputs:
