--- a/src/pages/installation/installation_awsorgsetup2.html
+++ b/src/pages/installation/installation_awsorgsetup2.html
@@ -6,7 +6,13 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h3>AWS Organization Setup Part 2 (optional)</h4>
-    <p>Prerequisites: AWS Organization setup Part 1 complete.</p>
+        <dl>
+            <dt>Prerequisites:</dt>
+            <dd>- AWS Organization Setup Part 1 complete</dd>
+             <dt>Estimated Time: ?? minutes</dt> 
+            <dt>Estimated Cost: none</dt> 
+        </dl>  
+
     <p>In Part 2 we configure a fully functional AWS Organization supporting 
         collaborative Serverless Stack development, publishing test stacks, and 
         publishing production stacks. </p>
