--- a/src/pages/installation/installation_awsorgsetupsteps.html
+++ b/src/pages/installation/installation_awsorgsetupsteps.html
@@ -5,29 +5,33 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-   <h4>AWS Organization Setup</h4>
-    <p>Prerequisites: Mgmt. Scripts Setup complete<br>
-       Estimated Time: 2 minutes, Costs: none<br>
-       Perform this step on the Management Workstation.</p>
-   <p>In this step we will use the CreateOrganization.ps1 script to 
-       create an AWS Organization, and the OrgDev Organizational Unit.
-   </p>
-   <ol>
-       <li>Open a PowerShell Terminal.</li>
-       <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
-       <li>Issue the following command:
-           <pre><code class="language-bashshell">. .\Org_Create.ps1</code></pre>
-           You will be prompted for your OrgCode and confirmation of the AWS CLI Profile to use. 
-           <br>
-           Here is an example of running the script: 
-           <pre><code class="language-bashshell">
+    <h4>AWS Organization Setup</h4>
+    <dl>
+        <dt>Prerequisites: AWS Mgmt. Account Setup Complete</dt>
+        <dt>Estimated Time: 2 minutes</dt>
+        <dt>Estimated Cost: none</dt>
+        <dt>Perform this step on the Management Workstation.</dt>
+    </dl>
+
+    <p>In this step we will use the Org_Create.ps1 script to
+        create an AWS Organization, and the OrgDev Organizational Unit.
+    </p>
+    <ol>
+        <li>Open a PowerShell terminal.</li>
+        <li>CD into the OrgMgmt folder. Replace "Org" with your OrgCode.</li>
+        <li>Issue the following command:
+            <pre><code class="language-bashshell">. .\Org_Create.ps1</code></pre>
+            You will be prompted for your OrgCode and confirmation of the AWS CLI Profile to use.
+            <br>
+            Here is an example of running the script:
+            <pre><code class="language-bashshell">
 Org_Create.ps v1.0.0 
 This script creates an Organization and an Organizational Unit for Dev.
 Note: Press return to accept a default value.
 Enter your OrgCode (ex: Lz): Az 
 Enter your AWS CLI Management Account Profile (default: AzMgmt):
 Please Review and Confirm the following:
-    OrgCode: Az 
+    OrgCode: AzDevJoe 
     Management Account Profile: AzMgmt 
     AWS Organizational Units to be created:
         - AzDevOU
@@ -37,11 +41,11 @@ Creating Organization
 Creating Organizational Units: 
     - AzDevOU created 
 Processing Complete</code></pre>
-       </li>
-   </ol>
-<h5>Step Summary</h5>
-<p>In this step we created our AWS Organization and the OrgDevOU Organizational Unit.
-</p>
+        </li>
+    </ol>
+    <h5>Step Summary</h5>
+    <p>In this step we created our AWS Organization and the OrgDevOU Organizational Unit.
+    </p>
 
 
 </div>
