--- a/src/pages/installation/installation_awstestousetupsteps.html
+++ b/src/pages/installation/installation_awstestousetupsteps.html
@@ -7,14 +7,18 @@ topic: GettingStarted
 <div class=lz-r-content>
 
    <h4>AWS Review Test Organizational Unit Setup </h4>
-   <p>Prerequisites: AWS Org. Setup Part 1 complete.<br>
-      Estimated Time: 2 minutes, Costs: none<br>
-      Perform this step on the Management Workstation</p>
+   <dl>
+      <dt>Prerequisites:</dt>
+      <dd>- AWS Organization Setup Part 1 compplete</dd>
+       <dt>Estimated Time: 1 minutes</dt> 
+      <dt>Estimated Cost: none</dt> 
+      <dt>Perform this step on the Management Workstation.</dt>
+  </dl>  
 
-      <ol>
-         <li>Open a PowerShell Terminal.</li>
-         <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
-         <li>Execute the Test_OU_Create.ps1 script:
+  <ol>
+      <li>Open a PowerShell Terminal.</li>
+      <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
+      <li>Execute the Test_OU_Create.ps1 script:
              <pre><code class="language-bashshell">. .\Test_OU_Create.ps1</code></pre>
                      Here is a script run with sample inputs:
                      <pre><code class="language-bashshell">
@@ -32,8 +36,8 @@ topic: GettingStarted
  Creating Organizational Unit:
     - AzTestOU created
  Processing Complete</code></pre>
-         </li>
-     </ol> 
+      </li>
+   </ol> 
 
 <h5>Step Summary</h5>
 <p>In this step we used the Test_OU_Create.ps1 script to create a Test Organizational Unit under 
