--- a/src/pages/installation/installation_overview.html
+++ b/src/pages/installation/installation_overview.html
@@ -42,6 +42,15 @@ topic: GettingStarted
                 </ul>
             </li>
         </ul>
+
+    <h4>Organizations with Multiple Application Stacks</h4>
+    <p>It is common to have more than one application stack - even if you have only a single application. For instance, you might 
+        have a application with a stack serving the consumer app and another stack serving a management console app.
+    </p>
+    <img src="/assets/img/LazyStackSMF3.svg" width = "600">
+    <p>* Not showing apps for development and testing stacks to reduce clutter.</p>
+    <p></p>
+
     <h4>Quick & Dirty</h4>
     <p>In a hurry? Already have a Software Management tool chain and just want to evaluate the LazyStack Development Tools? </p>
         <p>
