--- a/src/pages/intro/intro_smf.html
+++ b/src/pages/intro/intro_smf.html
@@ -31,4 +31,13 @@ topic: Security
     <p></p>
     <p>The organization described above complies with AWS best-practice for security and cost management. LazyStack SMF can be used with 
         or without the LazyStack Development tools.</p>
+
+    <p>And of course we need to manage multiple application stacks. Below we show two stacks. One serving
+        a consumer app and a second one serving a backoffice app.
+    </p>
+    <img src="/assets/img/LazyStackSMF3.svg" width="100%">      
+    <p>* Not showing development and testing app connections to reduce clutter.</p>
+    <p>You may have as many serverless stacks as you need and they can serve entirely different applications.
+    </p>
+
 </div>
