--- a/src/pages/installation/installation_aws.html
+++ b/src/pages/installation/installation_aws.html
@@ -79,6 +79,11 @@ topic: GettingStarted
         Workstation.</strong>
     </p>
 
+    <h5>Deployment Overview</h5>
+    <p>If you would like a full overview of the SMF Deployment process before proceeding with our step-by-step process, 
+        see the <a href="/installation/installation_awsdepguide.html">Deployment Overview</a> page.
+    </p>
+
     <h5>Insights</h5>
     <ul>
         <li>We recommend that you use a short "organization code" (OrgCode) to prefix all organizational units 
@@ -95,5 +100,7 @@ topic: GettingStarted
             need to perform.
         </li>
     </ul>
+
+
 
 </div>
