--- a/src/pages/installation/installation_awscicdsetupsteps.html
+++ b/src/pages/installation/installation_awscicdsetupsteps.html
@@ -5,26 +5,26 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS CI/CD Environment Setup</h4>
+    <h4>AWS CI/CD Test Environment Setup</h4>
     <dl>
         <dt>Prerequisites:</dt>
-        <dd>- Prod Account Setup complete</dd>
+        <dd>- Test Account Setup complete</dd>
+        <dd>- A GitHub Repository you want to use</dd>
         <dt>Estimated Time: 10 minutes</dt> 
         <dt>Estimated Cost: none</dt> 
         <dt>Perform this step on the Management Workstation.</dt>
     </dl>  
 
-    <p>In this step implement Continuous Integration and Continuous Deployment for 
-        your Testing and Production accounts using the AWS CodeBuild service integrated 
-        with a GitHub Account.
+    <p>This step assumes you have created an GitHub application repository and now 
+        want to publish production stacks from that repository. If you 
+        don't have a repository yet, no worries - you can come back to this step later on.
     </p>
+    
+    <p>You repeat this step for each GitHub repository you want to use in your SMF.</p>
 
     <ol>
-        <li><a href="https://github.com/join" {{>newtab}}>Create</a> a GitHub Account</li>
-        <br>
-        <li><a href="https://docs.github.com/en/github/getting-started-with-github/create-a-repo" {{>newtab}}>Create</a> a Project Repository</li>
-        <br>
-        <li>Create a CodeBuild Connection Connection for Test Account
+        <li>If you do not already have a CodeBuild GitHub Connection for the Test Account, follow these steps to create
+            one:
             <ol type="a">
                 <li>Log into the AWS OrgTest account using the OrgTest IAM User credentials.</li>
                 <li>Navigate to the <a href="https://console.aws.amazon.com/codesuite/codebuild/projects?" {{>newtab}}>CodeBuild</a> Console</li>
@@ -43,19 +43,6 @@ topic: GettingStarted
         </li>
         <br>
         <li>Run Test_CICD_Projects_Install.ps1 script.</li>
-        <br>
-        <li>Create a CodeBuild Connection for Prod Account
-            <ol type="a">
-                <li>Log into the AWS OrgProd account using the OrgProd IAM User Credentials.</li>
-                <li>Navigate to the <a href="https://console.aws.amazon.com/codesuite/codebuild/projects?" {{>newtab}}>CodeBuild</a> Console</li>
-                <li>Select Settings &rightarrow; Connections in navigation pane. The Developer Tools > Connections page appears.</li>                
-                <li>Click the Create Connection Button. The Create Connection page appears.</li>
-                <li>Select the GitHub radio button and enter a connection name.</li>
-                <li>todo</li>
-            </ol>
-        </li>
-        <br>
-        <li>Run Prod_CICD_Projects_Install.ps1 script.</li>
     </ol>
 
 </div>
