--- a/src/pages/installation/installation_overview.html
+++ b/src/pages/installation/installation_overview.html
@@ -6,7 +6,7 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
     <h3>Installation Overview</h4>
-    <p>LazyStack is comprised of two resources: The LazyStack Software Management Framework (SMF) and 
+    <p>LazyStack has two install components: The LazyStack Software Management Framework (SMF) and 
         the LazyStack Development Tools. Both can be used independently; or used together with seamless integration.
     </p>
     <h4>LazyStack AWS Software Management Framework (SMF)</h4>
