--- a/src/pages/installation/installation_awsmgmtacct.html
+++ b/src/pages/installation/installation_awsmgmtacct.html
@@ -108,7 +108,7 @@ secret_key     ****************8b3b shared-credentials-file
         </li>
         <br>
         <li><a href="https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-cli-install.html" 
-            {{> newtab}}>Install AWS SAM CLI</a></li>     
+            {{> newtab}}>Install AWS SAM CLI</a> - Only install Docker if you know you need it. It is not required to use LazyStack local debugging.</li>     
     </ol>
     
     <h5>Step Summary</h5>
