--- a/src/pages/installation/installation_mgmtscripts.html
+++ b/src/pages/installation/installation_mgmtscripts.html
@@ -34,11 +34,11 @@ topic: GettingStarted
             Install PowerShell<br></a> * If you are running Windows 10, PowerShell is already installed.</li>
         <br>
 
-        <li><a href="https://desktop.github.com/" {{>newtab}}>Install Git Client <br></a>* If you do not already have it.</li>
+        <li><a href="https://git-scm.com/downloads" {{>newtab}}>Install GitBash Client <br></a>* If you do not already have it.</li>
         <br>
-        <li>Open a PowerShell terminal and issue the following command to change the PowerShell script execution permissions:
+        <li>Open a PowerShell terminal with "Run as Administrator" and issue the following command to change the PowerShell script execution permissions:
             <pre><code class="language-bashshell">Set-ExecutionPolicy RemoteSigned</code></pre>
-            This will allow PowerShell scripts to run on the local computer.</li>
+            This will allow you to run PowerShell scripts on the local computer which is generally necessary for the Management Workstation.</li>
         <br>
         <li>CD to the folder that will contain your "OrgMgmt" folder and then issue the following command 
             to clone the LazyStackSMF git repository:
