revised install process

--- a/src/pages/installation/installation_awscicdsetupsteps.html
+++ b/src/pages/installation/installation_awscicdsetupsteps.html
@@ -5,7 +5,7 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS CI/CD Test Environment Setup</h4>
+    <h4>Setup Continuous Integration and Continuous Deployment for Test Account Stack</h4>
     <dl>
         <dt>Prerequisites:</dt>
         <dd>- Test Account Setup complete</dd>
