--- a/src/pages/installation/installation_awscicdsetupsteps2.html
+++ b/src/pages/installation/installation_awscicdsetupsteps2.html
@@ -5,7 +5,7 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS CI/CD Prod Environment Setup</h4>
+    <h4>Setup Continuous Deployment for Prod Account Stack</h4>
     <dl>
         <dt>Prerequisites:</dt>
         <dd>- Prod Account Setup complete</dd>
