--- a/src/pages/installation/installation_awsorgsetupsteps.html
+++ b/src/pages/installation/installation_awsorgsetupsteps.html
@@ -5,7 +5,7 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS Organization Setup</h4>
+    <h4>Create AWS Organization</h4>
     <dl>
         <dt>Prerequisites: AWS Mgmt. Account Setup Complete</dt>
         <dt>Estimated Time: 2 minutes</dt>
