--- a/src/pages/installation/installation_awsprodacctsetupsteps.html
+++ b/src/pages/installation/installation_awsprodacctsetupsteps.html
@@ -6,7 +6,7 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
 
-   <h4>AWS Production Account Setup </h4>
+   <h4>Create System Production Account</h4>
    <dl>
         <dt>Prerequisites:</dt>
         <dd>- Prod OU Setup Complete</dd>
