--- a/src/pages/installation/installation_awstestousetupsteps.html
+++ b/src/pages/installation/installation_awstestousetupsteps.html
@@ -9,7 +9,7 @@ topic: GettingStarted
    <h4>AWS Review Test Organizational Unit Setup </h4>
    <dl>
       <dt>Prerequisites:</dt>
-      <dd>- AWS Organization Setup Part 1 compplete</dd>
+      <dd>- AWS Organization Setup Part 1 complete</dd>
        <dt>Estimated Time: 1 minutes</dt> 
       <dt>Estimated Cost: none</dt> 
       <dt>Perform this step on the Management Workstation.</dt>
