--- a/src/pages/installation/installation_awsdevsetupsteps.html
+++ b/src/pages/installation/installation_awsdevsetupsteps.html
@@ -5,11 +5,11 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>Developer Account Setup</h4>
+    <h4>Create Developer Account</h4>
     <dl>
         <dt>Prerequisites:</dt>
         <dd>- Organization Setup complete</dd>
-        <dd>- Email address to use for Developer AccountId</dd>
+        <dd>- Email address to use for Developer Account</dd>
          <dt>Estimated Time: 2 minutes</dt> 
         <dt>Estimated Cost: none</dt> 
         <dt>Perform this step on the Management Workstation.</dt>
