--- a/src/pages/installation/installation_awsmgmtacct.html
+++ b/src/pages/installation/installation_awsmgmtacct.html
@@ -5,7 +5,7 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>AWS Management Account Setup</h4>
+    <h4>Create AWS Management Account</h4>
     <dl>
         <dt>Prerequisites:</dt>
             <dd>- Email Address to use for Root User in Management Account</dd>
