--- a/src/pages/installation/installation_awstestacctsetupsteps.html
+++ b/src/pages/installation/installation_awstestacctsetupsteps.html
@@ -6,14 +6,36 @@ topic: GettingStarted
 {{> installation_menu}}
 <div class=lz-r-content>
 
-   <h4>AWS Test Account Setup </h4>
+   <h4>Create System Test Account</h4>
    <dl>
         <dt>Prerequisites:</dt>
-        <dd>- Test OU Setup Complete</dd>
+        <dd>- Create AWS Org complete</dd>
+        <dd>- Unique email for root user of new account</dd>
+        <dd>- OrgCode (used when organization was created)</dd>
+        <dd>- SystemCode prefix (system short code to use for naming account)</dd>
         <dt>Estimated Time: 2 minutes</dt> 
         <dt>Estimated Cost: none</dt> 
         <dt>Perform this step on the Management Workstation.</dt>
     </dl>    
+
+    <p>Perform this step to setup a new system test account. A system 
+        is comprised of one or more serverless stacks. The newly created 
+        system test account will be part of the OrgTestOU. Your OrgTestOU may 
+        contain more than one system test account. Generally, you create 
+        system test accounts to isolate and separately manage the AWS resources 
+        in that system.
+    </p>
+
+    <h5>System Short Code</h5>
+    <p>We prefix system test account names with the OrgCode and a SysCode. The 
+        OrgCode should be the same prefix code used during the Create AWS Organization 
+        step. The SysCode should be a short 2 or 3 character code identifying the 
+        system the account is being created for. </p>
+    <p>The system test account name template is "OrgSysTest" where "Org" is replaced 
+        with your OrgCode and "Sys" is replaced with your SysCode.
+    </p>
+
+    <h5>Steps</h5>
     <ol>
         <li>Open a PowerShell Terminal.</li>
         <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
