Mod install menu

--- a/src/pages/installation/installation_devtools.html
+++ b/src/pages/installation/installation_devtools.html
@@ -10,7 +10,15 @@ topic: GettingStarted
         IDE and .NET Command Line Tool. Most editors, like Visual Studio Code, provide a means to call the .NET CLI through 
         the editor's UI so you can tailor your editor to use the LazyStack tools easily.
     </p>
-    <p>The LazyStack .NET CLI Tool should always be installed.
-    The other client integrations are optional but highly recommended.</p>
-    
+    <h4>Steps</h4>
+    <ul>
+        <li>Step 1 - Developer Profile Setup</li>
+        <li>Step 2 - .NET CLI Tool Setup</li>
+        <li>Step 3 - Visual Studio Setup (Optional)
+            <ul>
+                <li>Step 3.1 - Visual Studio IDE (Windows)</li>
+                <li>Step 3.2 - Visual Studio IDE (MacOS)</li>
+            </ul>
+        </li>
+    </ul>
 </div>
